<resources>
    <string name="app_name">SoundIdentifier</string>
    <string name="accept">Aceitar</string>
    <string name="permission_header">Habilite o Microfone</string>
    <string name="permissions_text">Para identificar os sons ao seu redor, é preciso permitir o uso do microfone</string>
    <string name="settings_icon">settings_icon</string>
    <string name="recording_description">Tentando identificar algum áudio ao seu redor</string>

    <!-- Erros -->
    <string name="timeout_error_text">Erro de conexão com o servidor.</string>
    <string name="error_subtext">Reinicie o aplicativo e tente novamente!</string>
    <string name="alert_button_text">OK</string>

    <!-- Settings Screen -->
    <string name="settings_title">Sons Reconhecidos:</string>
    <string name="settings_title2">Tipos de vibração:</string>
    <string name="dog_bark">Latido de Cachorro</string>
    <string name="gun_shot">Tiroteio</string>
    <string name="siren">Sirene</string>
    <string name="car_horn">Buzina de Carro</string>
    <string-array name="vibration_array">
        <item>Padrão</item>
        <item>Curta</item>
        <item>Longa</item>
        <item>Dupla</item>
        <item>Tripla</item>
    </string-array>

    <!-- Notification Configuration -->
    <string name="notification_channel_id">SoundIdentifier_Notifications</string>
    <string name="notification_channel_name">SoundIdentifier</string>
    <string name="notification_channel_description">Canal de notificação</string>

</resources>